# Spanish-language-learning

./: .gitignore  Agent.md  Cargo.toml  README.md
data/: vocabulary.json
godot/: project.godot
godot/assets/art/: cafe_interior_sim.png.import  library_interior_sim.png.import  player_avatar.png.import  player_run_spritesheet.png.import  scholar_npc.png.import  school_interior_rescaled.png.import  school_interior_sim.png.import  teacher_npc.png.import  village_map_sim.png.import
godot/data/audio/: bienvenidos.mp3.import  buenos-dias.mp3.import  hasta-luego.mp3.import  hola.mp3.import  mucho-gusto.mp3.import  que-tal.mp3.import  quieres.mp3.import  quiero.mp3.import
godot/data/courses/: numbers.json
godot/icons/: app_1024x1024.png.import  app_114x114.png.import  app_120x120.png.import  app_128x128.png.import  app_136x136.png.import  app_152x152.png.import  app_167x167.png.import  app_180x180.png.import  app_192x192.png.import  app_40x40.png.import  app_58x58.png.import  app_60x60.png.import  app_76x76.png.import  app_80x80.png.import  app_87x87.png.import
godot/scenes/: Main.tscn
godot/scenes/locations/: Cafe.tscn  Library.tscn  School.tscn  Village.tscn
godot/scripts/: CharacterArea.gd  CharacterArea.gd.uid  Main.gd  Main.gd.uid  MapLocation.gd  MapLocation.gd.uid  NumberLessonPanel.gd  PortalArea.gd  PortalArea.gd.uid  QuizPanel.gd  QuizPanel.gd.uid  VirtualJoystick.gd  VirtualJoystick.gd.uid
ios/SpanishQuest/SpanishQuest/: SpanishQuestApp.swift
ios/SpanishQuest/SpanishQuest.xcodeproj/: project.pbxproj
src/: main.rs
(+16 files in other folders)
