[package]
name = "spanish-learning"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spanish"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.86"
clap = { version = "=4.5.4", features = ["derive"] }
console = "=0.15.8"
dialoguer = { version = "=0.11.0", default-features = false }
pathdiff = "=0.2.1"
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "=1.0.117"
